// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageItem> renders a loading author 1`] = `
<div
  className="container"
>
  <div
    className="profilePhoto tableCell"
  >
    <Shimmer
      height={32}
      radius="50%"
      width={32}
    />
  </div>
  <div
    className="messageBody tableCell"
  >
    <Spacing
      bottom={0.5}
    >
      <Spacing
        inline={true}
        right={1}
      >
        <Shimmer
          height={14}
          width={175}
        />
      </Spacing>
      <Text
        inline={true}
        muted={true}
        small={true}
      >
        11:56 AM
      </Text>
    </Spacing>
    Hello world
  </div>
</div>
`;

exports[`<MessageItem> renders a message item 1`] = `
<div
  className="container"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`horizontalSpacing\` 1`] = `
<div
  className="container container_horizontalSpacing"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`important\` 1`] = `
<div
  className="container container_withStripe container_important"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`info\` stripe 1`] = `
<div
  className="container container_withStripe container_info"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`verticalSpacing\` 1`] = `
<div
  className="container container_verticalSpacing"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`warning\` stripe 1`] = `
<div
  className="container container_withStripe container_warning"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a sending overlay when message is sending 1`] = `
<div
  className="container"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
  <div
    className="sendingOverlay"
  />
</div>
`;

exports[`<MessageItem> renders a source when given 1`] = `
<div
  className="container"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM via web
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a title tag when given 1`] = `
<div
  className="container"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <span
          className="tag"
        >
          <Text
            inline={true}
            micro={true}
            muted={true}
          >
            CX
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders an email when given 1`] = `
<div
  className="container"
>
  <div
    className="table"
  >
    <div
      className="profilePhoto tableCell"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="messageBody tableCell"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="messageTitle"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
        <Text
          muted={true}
          small={true}
        >
          <Translate
            context="Who the message is from"
            email="foo@airbnb.com"
            html={true}
            phrase="From: %{email}"
          />
        </Text>
      </Spacing>
      <div
        className="messageBodyContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;
